# urfu-gl-lab

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake
src/core/: lanthe.cpp  lanthe.h  settings.h  window.cpp  window.h
